<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.insideout.rssimodelling.MainActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/beacon"
        android:inputType="number"
        android:ems="10"
        android:hint="Beacon Name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/beacon"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberOfScans"
        android:hint="Number of Scans"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberOfScans"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/numberOfExperiments"
        android:hint="Number of Experiments"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberOfExperiments"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/frequency"
        android:hint="Scan Frequency"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frequency"
        android:text="Set Distance:"
        android:id="@+id/textView"
        android:textSize="20dp"
        android:layout_marginTop="10dp"/>

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/horizontalScrollView"
        android:padding="10dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/distance"
            android:layout_alignParentStart="true"
            android:orientation="horizontal"
            android:id="@+id/distanceGroup"
            android:nestedScrollingEnabled="true">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button1"
                android:id="@+id/radioButton"
                android:checked="false"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button2"
                android:id="@+id/radioButton2"
                android:checked="false"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button3"
                android:id="@+id/radioButton3"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button4"
                android:id="@+id/radioButton4"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button5"
                android:id="@+id/radioButton5"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button6"
                android:id="@+id/radioButton6"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button7"
                android:id="@+id/radioButton7"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button8"
                android:id="@+id/radioButton8"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button9"
                android:id="@+id/radioButton9"
                android:layout_weight="1"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button10"
                android:id="@+id/radioButton10"
                android:layout_weight="1"/>
        </RadioGroup>
    </HorizontalScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start Scan"
        android:id="@+id/scanButton"
        android:onClick="scan"
        android:layout_below="@+id/horizontalScrollView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"/>



</RelativeLayout>
